<resources>
    <string name="app_name">PreferencesSettingsTest</string>
    <string name="text">Settings Using Preferences Example</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>

    <string name="sync_pref">Sync</string>
    <string name="sync_pref_summary">
        Get your photos,Videos,Contacts,Subscription etc on all your devices.
    </string>
    <string name="pref_syncConnectionType">Sync Connection Type</string>
    <string name="pref_syncConnectionType_dialog_title">Perform Sync Using</string>
    <string name="pref_syncConnectionType_default_value">WiFi</string>
    <string name="pref_syncConnectionType_summary">WiFi</string>

    <string-array name="pref_syncConnectionType_entries">
        <item>WiFi</item>
        <item>Mobile Data</item>
        <item>WiFi/Mobile Data</item>
    </string-array>

    <string-array name="pref_syncConnectionType_value">
        <item>WiFi</item>
        <item>Mobile Data</item>
        <item>WiFi_Mobile</item>
    </string-array>


    //Group setting
    <string name="storage_group_title">STORAGE</string>
    <string name="text_message_group_title">TEXT(SMS)MESSAGE</string>
    <string name="text_multimedia_message_group_title">MULTIMEDIA(MMS)MESSAGE</string>

    <string name="delete_message_title">Delete old message</string>
    <string name="delete_message_summary">Delete old message as limits are reached</string>

    <string name="text_message_limit_title">Text message limit</string>
    <string name="text_message_limit_summary">200 message per conversation</string>

    <string name="multimedia_message_limit_title">Multimedia message limit</string>
    <string name="multimedia_message_limit_summary">150 message per conversation</string>

    <string name="delivery_report_title">Delivery reports</string>
    <string name="delivery_report_summary">Request a Delivery reports for each messgae you send</string>

    <string name="sim_card_message_title">Manage SIM card message</string>
    <string name="sim_card_message_summary">Manage messages stord on your SIM card</string>
    <string name="settingsGroup">SettingsGroup</string>


    //preferences subscreen
    <string name="ringtone_title_group">RINGTONE</string>
    <string name="other_callsettings_title_group">OTHER CALL SETTINGS</string>

    <string name="voicemail_title">VoiceMail</string>
    <string name="dial_pad_touch_tone">Dial pd touch tones</string>
    <string name="vibrate_ringing_title">Vibrate when ringing</string>
    <string name="phone_ringtone_title">Phone ringtone</string>

    <string name="service_title">Services</string>
    <string name="service_summary">Google Voice</string>

    <string name="setup_title">Setup</string>

    <string name="ringtone_title">Ringtone</string>

    <string name="vibrate_title">Vibrate</string>
    <string name="vibrate_summary">Always</string>

</resources>
